# mandelbrot-Gempyre

./: .gitignore  CMakeLists.txt  README.md
gui/: mandelbrot.html
include/: mandelbrot_resource.h
src/: main.cpp  mandelbrotdraw.h
src/Precision/: complexprecision.h  fprecision.h  fractionprecision.h  intervalprecision.h  iprecision.h  precisioncore.cpp
